# kpsv2-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  kps_helper.py  main.py  pyproject.toml  service.py  test.py
.github/workflows/: python-publish.yml
kpsv2_client/: __init__.py  config.py  endpoints.py  kps_helper.py  kps_service.py  models.py  service.py  soap_client.py  sts_client.py  wsse.py  xmlutil.py
tests/: conftest.py  mocks.py  test_headers.py  test_service.py  test_sts_cache.py
