[tool.poetry]
name = "kpsv2-client"
version = "0.1.1"
description = "A client package for kpsv2.nvi.gov.tr"
authors = [
    "Ülkü Bayraktar <ulkubayraktar@gmail.com>",
    "Ali Eren Öztürk <oztalieren@gmail.com>",
    "Ecem Ekim <ecemekim3236@gmail.com>",
    "Seda Çağlar <seedacaglar@gmail.com>",
]
readme = "README.md"
packages = [{include = "kpsv2_client"}]
license = "MIT"

[project.urls]
Homepage = 'https://github.com/moneytolia/kpsv2-client'
Source = 'https://github.com/moneytolia/kpsv2-client'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
extend-select = ['Q', 'C90', 'I']
mccabe = { max-complexity = 14 }
isort = { known-first-party = ['kpsv2_client'] }
target-version = "py39"

[tool.ruff.per-file-ignores]
'kpsv2_client/__init__.py' = ['F405', 'F403', 'F401']
'kpsv2_client/kps_helper.py' = ['E501']

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
strict_optional = true
